# learn-claude-codetest

./: .gitignore  calculator.py  check_s10.py  chinano1.py  count_characters.py  example.txt  find_tasks_dir.py  find_team_impl.py  find_vars.py  fix_bug.py  gen_input.py  generate_chapters.py  greet.py  hello.py  match_chapters.py  output.txt  pyproject.toml  read_server.py  read_server2.py  refactor_ast.py  requirements.txt  setup.cfg  show_lines.py  test_file.txt  utils.py
.tasks/: task_1.json  task_10.json  task_11.json  task_12.json  task_2.json  task_3.json  task_4.json  task_5.json  task_6.json  task_7.json  task_8.json  task_9.json
.team/: config.json
.transcripts/: transcript_1777732630.json  transcript_1777732761.json  transcript_1777732895.json
.worktrees/: events.jsonl  index.json
agents/: check_inbox.py  check_status.py  check_tasks.py  clean_demo.py  config.py  debug_threads.py  demo_dependency_chain.py  demo_output.txt  demo_output2.txt  out.txt  out2.txt  output.txt  reset_and_run.py  run_check.bat  run_check.py  run_demo.py  s01_agent_loop.py  s01_agent_loop_test.py  s02-tool-usetest.py  s03_todo_writetest.py  s04_subagent_todotest.py  s04_subagenttest.py  s05_skill_loadingtest.py  s06_context_compacttest.py  s07-task-systemtest.py  s08_background_taskstest.py  s09_agent_teamstest.py  s10_team_protocolstest.py  s11_autonomous_agentstest.py  s12_worktree_task_isolationtest.py  s_fulltest.py
mcp-server/: server.py
myapp/: __init__.py  utils.py
test_output/: 红楼梦人物.txt  红楼梦原文.TXT  红楼梦章节人物.txt  红楼梦章节人物频率.txt  红楼梦章节名称.txt
tests/: __init__.py  (+4 more)
(+17 files in other folders)
